Fix z-index

--- a/src/components/Select/SelectWithOptions.css
+++ b/src/components/Select/SelectWithOptions.css
@@ -32,4 +32,5 @@
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
   width: 160px;
   position: absolute;
+  z-index: 999;
 }
